Added important notice to hubot.conf

--- a/support/hubot.conf
+++ b/support/hubot.conf
@@ -30,3 +30,7 @@ respawn limit 5 60
 
 exec start-stop-daemon --start --chuid ${HUBOT_USER} --chdir ${HUBOT_DIR} \
   --exec ${HUBOT_DIR}${HUBOT} -- --name ${HUBOT_USER} --adapter ${ADAPTER}  >> /var/log/hubot.log 2>&1
+
+# EXTREMELY IMPORTANT
+# Be sure to add the user specified by $HUBOT_USER. In this example, we would run useradd -s /bin/false fillmein.
+# From there, you can start Hubot by running start hubot from the command-line.
