Not using start-stop-daemon (ubuntu-only) #1

--- a/support/hubot.conf
+++ b/support/hubot.conf
@@ -28,8 +28,7 @@ env HUBOT_CAMPFIRE_ROOMS=''
 respawn
 respawn limit 5 60
 
-exec start-stop-daemon --start --chuid ${HUBOT_USER} --chdir ${HUBOT_DIR} \
-  --exec ${HUBOT_DIR}${HUBOT} -- --name ${HUBOT_USER} --adapter ${ADAPTER}  >> /var/log/hubot.log 2>&1
+exec ${HUBOT_DIR}${HUBOT} --name ${HUBOT_USER} --adapter ${ADAPTER}  >> /var/log/hubot.log 2>&1
 
 # EXTREMELY IMPORTANT
 # Be sure to add the user specified by $HUBOT_USER. In this example, we would run useradd -s /bin/false fillmein.
