--- a/support/hubot.conf
+++ b/support/hubot.conf
@@ -15,7 +15,7 @@ env HUBOT_DIR='/opt/hubot/'
 env HUBOT='bin/hubot'
 env ADAPTER='campfire'
 # Name (and local user) to run Hubot as
-env HUBOT_USER='fillmein'
+env HUBOT_USER='hubot'
 # httpd listen port
 env PORT='5555'
 
@@ -31,5 +31,5 @@ respawn limit 5 60
 exec ${HUBOT_DIR}${HUBOT} --name ${HUBOT_USER} --adapter ${ADAPTER}  >> /var/log/hubot.log 2>&1
 
 # EXTREMELY IMPORTANT
-# Be sure to add the user specified by $HUBOT_USER. In this example, we would run useradd -s /bin/false fillmein.
+# Be sure to add the user specified by $HUBOT_USER. In this example, we would run useradd -s /bin/false hubot.
 # From there, you can start Hubot by running start hubot from the command-line.
